# tanktics

./: .gitignore  docker-compose.yml  package-lock.json
backend/: Dockerfile  Makefile  pyproject.toml
backend/tanktics/: config.py  main.py
backend/tanktics/dals/: __init__.py  base_dal.py  rooms_dal.py  tanks_dal.py  user_dal.py
backend/tanktics/models/: room.py  tank.py  user.py
backend/tanktics/routers/: auth.py  room.py  tanks.py  user.py
backend/tanktics/security/: OAuth2PasswordBearerWithCookie.py
backend/tanktics/src/dals/: __init__.py  base_dal.py  rooms_dal.py  tanks_dal.py
backend/tanktics/src/models/: position.py  room.py  tank.py  user.py
backend/tanktics/src/routers/: room.py  tanks.py
backend/tanktics/utils/: password_utils.py
frontend/: Dockerfile  Makefile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.sass  App.tsx  index.css  main.tsx
frontend/src/actions/: authActions.ts  index.ts  roomActions.ts  tankActions.ts  userActions.ts
frontend/src/components/: Navbar.tsx  Title.tsx
frontend/src/components/board/: Board.sass  Board.tsx
frontend/src/components/routes/: ErrorPage.tsx  RoomBrowserPage.sass  RoomBrowserPage.tsx  RoomPage.tsx  RootPage.sass  RootPage.tsx  SignInPage.tsx
frontend/src/components/tank/: Tank.tsx
frontend/src/contexts/: GridContext.tsx  TanksContext.tsx
frontend/src/hooks/: useSearchParams.ts
frontend/src/types/: room.ts  tank.ts  user.ts
